update index html.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,4 +1,17 @@
 
-hello rotation score
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Billiard Rotation Score</title>
+</head>
+<body>
 
+<div>
+
+	<input type="text" name="" value="AAA">
+	<input type="text" name="" value="AAA">
+</div>
+
+</body>
+</html>>
 
